[package]
name = "blast_core"
version = "0.1.0"
edition = "2021"

[dependencies]
blast_model_interface = { path = "../blast_model_interface" }
bitcoin = { version = "0.30.1" }
sim-lib = { git = "https://github.com/bjohnson5/sim-ln", branch = "main" }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.104"
anyhow = { version = "1.0.69", features = ["backtrace"] }
simple_logger = "4.2.0"
log = "0.4.20"
bitcoincore-rpc = "0.18.0"
jsonrpc = "0.18.0"
