[package]
name = "blast_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.30.1" }
simln-lib = { git = "https://github.com/bjohnson5/sim-ln", branch = "main" }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.104"
anyhow = { version = "1.0.69", features = ["backtrace"] }
log = "0.4.20"
bitcoincore-rpc = "0.18.0"
jsonrpc = "0.18.0"
tonic = "0.11.0"
prost = "0.12.3"
tar = "0.4"
flate2 = "1.0"

[build-dependencies]
tonic-build = "0.11.0"
