[package]
name = "blast_ldk"
version = "0.1.0"
edition = "2021"

[dependencies]
ldk-node = "0.4.0"
tonic = "0.11.0"
tokio = { version = "1.37.0", features = ["full"] }
prost = "0.12"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.104"

[build-dependencies]
tonic-build = "0.11.0"