[package]
name = "blast_ldk"
version = "0.1.0"
edition = "2021"

[dependencies]
ldk-node = "0.4.2"
tonic = "0.11.0"
tokio = { version = "1.37.0", features = ["full"] }
prost = "0.12"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.104"
secp256k1 = "0.29.1"
hex = "0.4.3"
simplelog = "0.12.2"
log = "0.4.20"
tar = "0.4"
flate2 = "1.0"

[build-dependencies]
tonic-build = "0.11.0"